# rf-detr-to-coreml

./: .gitignore  README.md  pyproject.toml
rfdetr_coreml/: __init__.py  cli.py  coreml_fixes.py  export.py  patches.py
scripts/: benchmark_base.py  test_all_models.py  test_seg_all.py  test_seg_nano.py  validate_coreml.swift
